--- a/SBUI/src/index.html
+++ b/SBUI/src/index.html
@@ -7,6 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <script src="https://kit.fontawesome.com/407ee75046.js"></script>
 </head>
 <body class="h-100">
   <app-root></app-root>
